Made a few corrections to secrets classes.